--- a/TASK01/LANDINGPAGE.HTML
+++ b/TASK01/LANDINGPAGE.HTML
@@ -43,7 +43,7 @@
 	<!-- Content -->
 	<div class="line" id="Home">
 		<div class="side1">
-			<h1>Jananni's page</h1>
+			<h1>Nikil's page</h1>
 			<button>
 				<a href=
                 https://www.google.co.in>
